# sharesphere

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  input.css  leptosfmt.toml  package-lock.json  package.json
lib/app/: Cargo.toml
lib/app/src/: app.rs  comment.rs  lib.rs  post.rs  profile.rs  search.rs  sidebar.rs  sphere.rs
lib/app/tests/: test_auth.rs  test_comment.rs  test_embed.rs  test_post.rs  test_ranking.rs  test_role.rs  test_rule.rs  test_satellite.rs  test_sphere.rs
lib/app/tests/common/: mod.rs
lib/app/tests/data_factory/: mod.rs
lib/app/tests/utils/: mod.rs
lib/auth/: Cargo.toml
lib/auth/src/: auth.rs  auth_widget.rs  lib.rs  notification.rs  role.rs  session.rs  user.rs
lib/components/: Cargo.toml
lib/components/app/: Cargo.toml  build.rs
lib/components/app/src/: app.rs  home.rs  lib.rs
lib/components/base/: Cargo.toml
lib/components/base/src/: comment.rs  embed.rs  filter.rs  lib.rs  moderation.rs  rule.rs  search.rs  sphere_category.rs
lib/components/common/: Cargo.toml
lib/components/common/src/: auth_widget.rs  lib.rs  notification.rs  sphere.rs  state.rs  user.rs
lib/components/content/src/: comment.rs  lib.rs  moderation.rs  post.rs  profile.rs
lib/components/sphere/: Cargo.toml
lib/components/sphere/src/: rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
lib/components/src/: lib.rs  navigation_bar.rs  policy.rs  profile.rs  search.rs
lib/components/ui/: Cargo.toml
lib/components/ui/src/: policy.rs  search.rs  sidebar.rs
lib/components/utils/: Cargo.toml
lib/components/utils/src/: colors.rs  editor.rs  errors.rs  form.rs  icons.rs  lib.rs  node_utils.rs  unpack.rs  view.rs  widget.rs
lib/content/: Cargo.toml
lib/content/src/: comment.rs  lib.rs  moderation.rs  post.rs  ranking.rs
lib/core/: Cargo.toml
lib/core/common/src/: checks.rs  colors.rs  common.rs  constants.rs  db_utils.rs  editor.rs  errors.rs  lib.rs  routes.rs  time.rs  traits.rs  unpack.rs
lib/core/content/embed/: oembed_providers.json
lib/core/content/src/: comment.rs  embed.rs  moderation.rs  post.rs  profile.rs  ranking.rs  search.rs
lib/core/sphere/src/: lib.rs  rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
lib/core/src/: comment.rs  filter.rs  lib.rs  moderation.rs  notification.rs  post.rs  profile.rs  ranking.rs  rule.rs  satellite.rs  search.rs  sidebar.rs  sphere.rs  sphere_category.rs  sphere_management.rs  state.rs
lib/core/tests/: test_auth.rs  test_comment.rs  test_moderation.rs  test_notification.rs  test_post.rs  test_profile.rs  test_ranking.rs  test_role.rs  test_rule.rs  test_satellite.rs  test_search.rs  test_sphere.rs  test_sphere_category.rs  test_sphere_management.rs  test_user.rs
lib/core/tests/common/: mod.rs
lib/core/tests/data_factory/: mod.rs
lib/core/tests/src/: lib.rs
lib/core/tests/tests/: test_auth.rs  test_comment.rs  test_moderation.rs  test_post.rs  test_profile.rs  test_ranking.rs  test_role.rs  test_rule.rs  test_satellite.rs  test_search.rs  test_sphere.rs  test_sphere_management.rs  test_user.rs
lib/core/tests/utils/: mod.rs
lib/core/user/: Cargo.toml
lib/core/user/src/: auth.rs  notification.rs  role.rs  session.rs  user.rs
lib/interfaces/content/: Cargo.toml
lib/interfaces/content/src/: comment.rs  lib.rs  moderation.rs  post.rs  profile.rs  ranking.rs  search.rs
lib/interfaces/sphere/: Cargo.toml
lib/interfaces/sphere/src/: rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
lib/utils/: Cargo.toml
lib/utils/src/: checks.rs  colors.rs  constants.rs  editor.rs  embed.rs  error_template.rs  errors.rs  form.rs  icons.rs  lib.rs  node_utils.rs  routes.rs  unpack.rs  widget.rs
libs/components/app/: Cargo.toml
libs/components/app/src/: app.rs  home.rs  lib.rs
libs/components/base/: Cargo.toml
libs/components/base/src/: comment.rs  embed.rs  filter.rs  lib.rs  moderation.rs  notification.rs  post.rs  ranking.rs  rule.rs  search.rs  sphere.rs  sphere_category.rs  state.rs
libs/components/content/: Cargo.toml
libs/components/content/src/: comment.rs  embed.rs  lib.rs  moderation.rs  post.rs  profile.rs  ranking.rs
libs/components/sphere/: Cargo.toml
libs/components/sphere/src/: rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
libs/components/ui/: Cargo.toml
libs/components/ui/src/: lib.rs  navigation_bar.rs  policy.rs  search.rs  sidebar.rs
libs/core/content/: Cargo.toml
libs/core/content/embed/: providers.json
libs/core/content/src/: comment.rs  embed.rs  filter.rs  lib.rs  moderation.rs  post.rs  profile.rs  ranking.rs  search.rs
libs/core/sphere/: Cargo.toml
libs/core/sphere/src/: rule.rs  satellite.rs  sphere.rs  sphere_category.rs  sphere_management.rs
libs/core/tests/: Cargo.toml
libs/core/tests/tests/: test_auth.rs  test_comment.rs  test_embed.rs  (+12 more)
libs/interfaces/user/: Cargo.toml
server/: Cargo.toml
server/src/: fallback.rs  main.rs  state.rs
web-app/app/: Cargo.toml
web-app/app/src/: app.rs  auth.rs  colors.rs  comment.rs  constants.rs  content.rs  editor.rs  embed.rs  error_template.rs  errors.rs  footer.rs  form.rs  forum.rs  forum_category.rs  forum_management.rs  icons.rs  lib.rs  moderation.rs  navigation_bar.rs  post.rs  profile.rs  ranking.rs  role.rs  rule.rs  rules.rs  satellite.rs  score.rs  search.rs  sidebar.rs  sphere.rs  sphere_category.rs  sphere_management.rs  unpack.rs  user.rs  widget.rs
web-app/app/tests/: test_auth.rs  test_comment.rs  test_comments.rs  test_embed.rs  test_forum.rs  test_forum_category.rs  test_forum_management.rs  test_post.rs  test_profile.rs  test_ranking.rs  test_role.rs  test_roles.rs  test_rule.rs  test_satellite.rs  test_search.rs  test_sphere.rs  test_sphere_category.rs  test_sphere_management.rs  test_user.rs
web-app/server/: Cargo.toml
web-app/server/src/: fallback.rs  main.rs  state.rs
web-app/services/: Cargo.toml
web-app/sharesphere_core/: Cargo.toml
web-app/sharesphere_core/src/: lib.rs  moderation.rs  post.rs  rule.rs  satellite.rs  sphere.rs
(+336 files in other folders)
