[workspace]
resolver = "2"
members = [
    "lib/utils",
    "lib/auth",
    "lib/core",
    "lib/app",
    "frontend",
    "server",
]

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.7.7", features = ["nightly", "nonce"] }
leptos_meta = { version = "0.7.7" }
leptos_router = { version = "0.7.7", features = ["nightly"] }
leptos_axum = { version = "0.7.7" }
server_fn = { version = "0.7.7", features = [ "multipart"] }

leptos-use = { version = "0.15.1", features = ["use_textarea_autosize"] }

anyhow = "*"
axum = {  version = "0.7", features = [ "macros" ] }
axum_session = { version = "0.14.4" }
axum_session_auth = { version = "0.14.1" }
axum_session_sqlx = { version = "0.3.0" }
console_error_panic_hook = "0.1.7"
console_log = "1"
chrono = { version = "0.4.38", features = [ "alloc", "serde" ] }
http = "1"
log = "0.4.20"
lru = "0.13.0"
serde = { version = "*", features = ["derive"] }
simple_logger = "5.0.0"
sqlx = { version = "0.8.2", features = [ "chrono", "postgres", "runtime-tokio", "tls-rustls" ] }
thiserror = "2.0.3"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
wasm-bindgen = "=0.2.100"
web-sys = "0.3.70"

# See https://github.com/akesson/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "sharesphere"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = []

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = []

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
