[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_utils = { path = "../lib/utils", default-features = false, features = ["ssr"] }
sharesphere_auth = { path = "../lib/auth", default-features = false, features = ["ssr"] }
sharesphere_core = { path = "../lib/core", default-features = false, features = ["ssr"] }
sharesphere_app = { path = "../lib/app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true

axum.workspace = true
axum_session.workspace = true
axum_session_auth.workspace = true
axum_session_sqlx.workspace = true
log.workspace = true
simple_logger.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

base64 = "0.22.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
