[package]
name = "sharesphere_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_utils = { path = "../utils", default-features = false}
sharesphere_auth = { path = "../auth", default-features = false}
sharesphere_core = { path = "../core", default-features = false}
sharesphere_sphere = { path = "../sphere", default-features = false}
sharesphere_content = { path = "../content", default-features = false}
sharesphere_components = { path = "../components", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

log.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_utils/hydrate",
    "sharesphere_auth/hydrate",
    "sharesphere_core/hydrate",
    "sharesphere_sphere/hydrate",
    "sharesphere_content/hydrate",
    "sharesphere_components/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "sharesphere_utils/ssr",
    "sharesphere_auth/ssr",
    "sharesphere_core/ssr",
    "sharesphere_sphere/ssr",
    "sharesphere_content/ssr",
    "sharesphere_components/ssr",
]
