[package]
name = "sharesphere_app"
version = "0.1.0"
edition = "2024"
description = "Root of the ShareSphere app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_utils = { path = "../utils", default-features = false}
sharesphere_auth = { path = "../auth", default-features = false}
sharesphere_core = { path = "../core", default-features = false}
sharesphere_sphere = { path = "../sphere", default-features = false}
sharesphere_content = { path = "../content", default-features = false}
sharesphere_components = { path = "../components", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

axum = { workspace = true, optional = true}
leptos-fluent.workspace = true
leptos-use.workspace = true
log.workspace = true
regex = "1.12.2"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos-fluent/hydrate",
    "sharesphere_utils/hydrate",
    "sharesphere_auth/hydrate",
    "sharesphere_core/hydrate",
    "sharesphere_sphere/hydrate",
    "sharesphere_content/hydrate",
    "sharesphere_components/hydrate",
]
ssr = [
    "dep:axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sharesphere_utils/ssr",
    "sharesphere_auth/ssr",
    "sharesphere_core/ssr",
    "sharesphere_sphere/ssr",
    "sharesphere_content/ssr",
    "sharesphere_components/ssr",
]
