[package]
name = "sharesphere_components"
version = "0.1.0"
edition = "2024"
description = "Crate for various components (search, profile, etc.)"

[dependencies]
sharesphere_utils = { path = "../utils", default-features = false}
sharesphere_auth = { path = "../auth", default-features = false}
sharesphere_core = { path = "../core", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

leptos-fluent.workspace = true
leptos-use.workspace = true

serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos-fluent/hydrate",
    "sharesphere_utils/hydrate",
    "sharesphere_auth/hydrate",
    "sharesphere_core/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sharesphere_utils/ssr",
    "sharesphere_auth/ssr",
    "sharesphere_core/ssr",
]

