[package]
name = "sharesphere_content"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_utils = { path = "../utils", default-features = false}
sharesphere_auth = { path = "../auth", default-features = false}
sharesphere_core = { path = "../core", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

leptos-use.workspace = true

chrono.workspace = true
log.workspace = true
url.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_utils/hydrate",
    "sharesphere_auth/hydrate",
    "sharesphere_core/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "sharesphere_utils/ssr",
    "sharesphere_auth/ssr",
    "sharesphere_core/ssr",
]
