[package]
name = "sharesphere_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_utils = { path = "../utils", default-features = false}
sharesphere_auth = { path = "../auth", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
server_fn.workspace = true

leptos-use.workspace = true

anyhow = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, optional = true }
chrono.workspace = true
log.workspace = true
lru = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

async-trait = { version = "*", optional = true }

const_format = "0.2.33"
infer = { version = "0.19.0", optional = true }
markdown = { version = "1.0.0-alpha.20", optional = true }
quick-xml = { version = "0.37.1", optional = true }
openidconnect = { version = "4.0.0", optional = true }
reqwest = { version = "0.12.12", features = ["json"], optional = true }
http = "1.2.0"

[dev-dependencies]
bytes = "1.7.1"
float-cmp = "0.10.0"
futures-util = "0.3.30"
multer = "3.1.0"
rand = "0.9.0"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_utils/hydrate",
    "sharesphere_auth/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "sharesphere_utils/ssr",
    "sharesphere_auth/ssr",
    "dep:anyhow",
    "dep:async-trait",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:infer",
    "dep:markdown",
    "dep:quick-xml",
    "dep:leptos_axum",
    "dep:lru",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
]

