[package]
name = "sharesphere_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_utils = { path = "../utils", default-features = false}
sharesphere_auth = { path = "../auth", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
server_fn.workspace = true

leptos-use.workspace = true

chrono.workspace = true
log.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

http = "1.3.1"
infer = { version = "0.19.0", optional = true }

[dev-dependencies]
bytes = "1.10.1"
float-cmp = "0.10.0"
futures-util = "0.3.31"
multer = "3.1.0"
rand = "0.9.1"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_utils/hydrate",
    "sharesphere_auth/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "sharesphere_utils/ssr",
    "sharesphere_auth/ssr",
    "dep:infer",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:tokio",
]

