[package]
name = "sharesphere_core"
version = "0.1.0"
edition = "2024"
description = "Core crate containing server functions (except those related to authentication)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_utils = { path = "../utils", default-features = false}
sharesphere_auth = { path = "../auth", default-features = false}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
server_fn.workspace = true

leptos-fluent.workspace = true
leptos-use.workspace = true

chrono.workspace = true
log.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }
validator.workspace = true

http = "1.3.1"
image = { version = "0.25.8", optional = true }
infer = { version = "0.19.0", optional = true }
object_store = {  version = "0.12.4", features = ["aws"], optional = true }
webp = { version = "0.3.1", optional = true }

[dev-dependencies]
bytes = "1.10.1"
float-cmp = "0.10.0"
fluent-templates = "0.13.1"
futures-util = "0.3.31"
multer = "3.1.0"
rand = "0.9.2"
sealed_test = "1.1.0"
unic-langid = "0.9.6"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos-fluent/hydrate",
    "sharesphere_utils/hydrate",
    "sharesphere_auth/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "sharesphere_utils/ssr",
    "sharesphere_auth/ssr",
    "dep:image",
    "dep:infer",
    "dep:object_store",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:tokio",
    "dep:url",
    "dep:webp",
]

