[package]
name = "sharesphere_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
server_fn.workspace = true

leptos-use.workspace = true

chrono.workspace = true
http.workspace = true
log.workspace = true
openidconnect = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
web-sys.workspace = true

async-trait = { version = "*", optional = true }

ammonia = "4"
const_format = "0.2.33"
gloo-net = { version = "0.6.0", features = ["http"] }
lazy_static = "1.5.0"
markdown = { version = "1.0.0-alpha.20", optional = true }
mime_guess = "2.0.5"
quick-xml = { version = "0.37.1", optional = true }
send_wrapper = { version = "0.6.0", features = ["futures"] }
url = "*"

[dev-dependencies]
indoc = "2.0.5"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "dep:async-trait",
    "dep:markdown",
    "dep:quick-xml",
    "dep:leptos_axum",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
]

