[package]
name = "sharesphere_utils"
version = "0.1.0"
edition = "2024"
description = "Utility functions and components"

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

leptos-fluent.workspace = true
leptos-use.workspace = true

chrono.workspace = true
http.workspace = true
log.workspace = true
openidconnect = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
url.workspace = true
validator.workspace = true
web-sys.workspace = true

async-trait = { version = "*", optional = true }

ammonia = "4.1.2"
const_format = "0.2.35"
gloo-net = { version = "0.6.0", features = ["http"] }
markdown = "1.0.0"
mime_guess = "2.0.5"
quick-xml = "0.38.3"
send_wrapper = { version = "0.6.0", features = ["futures"] }

[dev-dependencies]
indoc = "2.0.6"
fluent-templates = "0.13.1"
sealed_test = "1.1.0"
unic-langid = "0.9.6"

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos-fluent/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos-use/ssr",
    "dep:async-trait",
    "dep:leptos_axum",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:sqlx",
    "dep:tokio",
]

