[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

leptos-use.workspace = true

anyhow = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
axum_session_sqlx = { workspace = true, optional = true }
chrono.workspace = true
http.workspace = true
log.workspace = true
lru = { workspace = true, optional = true }
serde.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }

async-trait = { version = "*", optional = true }

cfg-if = "1"
const_format = "0.2.33"
markdown = { version = "1.0.0-alpha.20", optional = true }
quick-xml = { version = "0.36.1", optional = true }
openidconnect = { version = "3.5.0", optional = true }
strum = "0.26.3"
strum_macros = "0.26.4"
serde_json = "1.0.128"
tracing-subscriber = "0.3.18"

[dev-dependencies]
float-cmp = "0.9.0"
indoc = "2.0.5"
rand = "0.8.5"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "dep:anyhow",
    "dep:async-trait",
    "dep:axum_session",
    "dep:axum_session_auth",
    "dep:axum_session_sqlx",
    "dep:markdown",
    "dep:quick-xml",
    "dep:leptos_axum",
    "dep:lru",
    "dep:openidconnect",
    "dep:sqlx",
    "dep:tokio",
]

