[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_router.workspace = true
leptos_axum.workspace = true

anyhow.workspace = true
axum.workspace = true
axum_session.workspace = true
axum_session_auth.workspace = true
axum_session_sqlx.workspace = true
log.workspace = true
simple_logger.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
wasm-bindgen.workspace = true

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
