[package]
name = "services"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib", "rlib"]

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "scoring"

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }

log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
