[package]
name = "sharesphere_app"
version = "0.1.0"
edition = "2024"
description = "Root of the ShareSphere app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sharesphere_core_common = { path = "../../core/common", default-features = false }
sharesphere_core_content = { path = "../../core/content", default-features = false }
sharesphere_iface_user = { path = "../../interfaces/user", default-features = false }
sharesphere_iface_sphere = { path = "../../interfaces/sphere", default-features = false }
sharesphere_iface_content = { path = "../../interfaces/content", default-features = false }
sharesphere_cmp_utils = { path = "../utils", default-features = false }
sharesphere_cmp_common = { path = "../common", default-features = false }
sharesphere_cmp_base = { path = "../base", default-features = false }
sharesphere_cmp_sphere = { path = "../sphere", default-features = false }
sharesphere_cmp_content = { path = "../content", default-features = false }
sharesphere_cmp_ui = { path = "../ui", default-features = false }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

axum = { workspace = true, optional = true}
const_format.workspace = true
leptos-fluent.workspace = true
leptos-use.workspace = true
log.workspace = true
regex = "1.12.3"

[build-dependencies]
serde_json.workspace = true
url.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "sharesphere_iface_user/hydrate",
    "sharesphere_iface_sphere/hydrate",
    "sharesphere_iface_content/hydrate",
    "sharesphere_cmp_utils/hydrate",
    "sharesphere_cmp_common/hydrate",
    "sharesphere_cmp_base/hydrate",
    "sharesphere_cmp_sphere/hydrate",
    "sharesphere_cmp_content/hydrate",
    "sharesphere_cmp_ui/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "sharesphere_core_common/ssr",
    "sharesphere_core_content/ssr",
    "sharesphere_iface_user/ssr",
    "sharesphere_iface_sphere/ssr",
    "sharesphere_iface_content/ssr",
    "sharesphere_cmp_utils/ssr",
    "sharesphere_cmp_common/ssr",
    "sharesphere_cmp_base/ssr",
    "sharesphere_cmp_sphere/ssr",
    "sharesphere_cmp_content/ssr",
    "sharesphere_cmp_ui/ssr",
    "dep:axum",
]
